--- a/TaskParallelism/TaskParallelism.vcxproj
+++ b/TaskParallelism/TaskParallelism.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="FileProcessors\ConcurrentFileProcessor.cpp" />
     <ClCompile Include="FileProcessors\OpenHandleConcurrentFileProcessor.cpp" />
     <ClCompile Include="FileProcessors\OpenHandleFileProcessor.cpp" />
+    <ClCompile Include="FileProcessors\PipelinedFileProcessor.cpp" />
     <ClCompile Include="FileProcessors\SequentialFileProcessor.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -132,6 +133,7 @@
     <ClInclude Include="FileProcessors\ConcurrentFileProcessor.h" />
     <ClInclude Include="FileProcessors\OpenHandleConcurrentFileProcessor.h" />
     <ClInclude Include="FileProcessors\OpenHandleFileProcessor.h" />
+    <ClInclude Include="FileProcessors\PipelinedFileProcessor.h" />
     <ClInclude Include="FileProcessors\SequentialFileProcessor.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
