--- a/TaskParallelism/TaskParallelism.vcxproj.filters
+++ b/TaskParallelism/TaskParallelism.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="FileProcessors\SequentialFileProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileProcessors\PipelinedFileProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="concurrentqueue.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileProcessors\SequentialFileProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileProcessors\PipelinedFileProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
